package br.com.apibancaria;

import org.springframework.boot.CommandLineRunner;
import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ApibancariaApplication implements CommandLineRunner{

	public static void main(String[] args) {
		SpringApplication.run(ApibancariaApplication.class, args);
	}

	@Override
	public void run(String... args) throws Exception {

	}
}
