package br.com.apibancaria.enums;

public enum StatusCliente {
    ATIVO,
    INATIVO
}
