package br.com.apibancaria.model;

public enum StatusConta {

    ATIVA,
    BLOQUEADA,
    ENCERRADA
}
