package br.com.apibancaria.model;

public enum TipoChavePix {

    CPF,
    EMAIL,
    TELEFONE

}
