package br.com.apibancaria.model;

public enum TipoTransacao {

    DEPOSITO,
    SAQUE,
    PIX
}
