package br.com.apibancaria.repository;

import br.com.apibancaria.model.Conta;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface ContaRepository extends JpaRepository<Conta, Long> {

    boolean existsByNumeroConta(String numeroConta);
}
